--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
+    <link
+      rel="stylesheet"
+      href="//at.alicdn.com/t/font_1723263_atg0288c1hc.css"
+    />
+    <script src="//at.alicdn.com/t/font_1723263_rycs2ri1cp.js"></script>
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script src="//g.alicdn.com/fdilab/lib3rd/viewport-units-buggyfill/0.6.2/??viewport-units-buggyfill.hacks.min.js,viewport-units-buggyfill.min.js"></script>
     <script>
